# thinpic_flutter

./: .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
.github/: cspell.json
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/lib/: main.dart
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/windows/runner/: Runner.rc  main.cpp
example2/: README.md
example2/android/app/src/main/: AndroidManifest.xml
example2/ios/Runner/: Info.plist
example2/ios/Runner.xcodeproj/: project.pbxproj
example2/lib/: main.dart
example2/linux/: CMakeLists.txt
example2/linux/runner/: my_application.cc
example2/macos/Runner.xcodeproj/: project.pbxproj
example2/macos/Runner/Configs/: AppInfo.xcconfig
example2/web/: index.html  manifest.json
example2/windows/: CMakeLists.txt
lib/: thinpic_flutter.dart  thinpic_flutter_bindings_generated.dart
lib/src/: file_types.dart  thinpic_flutter.dart  thinpic_flutter_ffi_functions.dart
lib/src/ffi/: libvips_ffi.dart
src/main/cpp/: CMakeLists.txt  image_compressor copy.c  image_compressor.c  image_compressor.h  png_compressor.c  vips_smart_wrapper.c
src/main/cpp/include/: expat_config.h
src/main/cpp/include/glibconfig/: glibconfig.h
src/main/cpp/include/vips/: enumtypes.h  version.h
test/: thinpic_flutter_test.dart  widget_test.dart
test/src/: thinpic_flutter_test.dart
(+2 files in other folders)
